[package]
name = "mirror-cache"
version = "0.1.0"
authors = ["SeanChao <seanchao0804@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytefmt = "0.1"
bytes = "1.0"
chrono = "0.4"
clap = "2"
config = "0.11"
futures = "0.3"
log = "0.4"
lazy_static = "1"
metrics = "0.17"
metrics-exporter-prometheus = "0.6"
metrics-util = "0.10"
notify = "5.0.0-pre.12"
pretty_env_logger = "0.4"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["stream"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
serde_derive = "^1.0"
serde = "^1.0"
warp = "0.3"

[dev-dependencies]
serial_test = "*"
